--- a/video_pages/Science_at_Sea/Aerosol_Tower.html
+++ b/video_pages/Science_at_Sea/Aerosol_Tower.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Aerosol Tower</b>
-      <p><video controls height='360px' width='640px'><source src='../video/Aerosol_Tower-iPhone.m4v' type='video/mp4' /><source src='../video/Aerosol_Tower-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/Aerosol_Tower.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/Aerosol_Tower.mov'><embed src='../video/Aerosol_Tower.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+      <p>
+      <iframe width="640" height="360" src="http://www.youtube.com/embed/LMp1ivlN5sE?rel=0" frameborder="0" allowfullscreen></iframe>
+      </p>
 
 <p><br />
-<a href="../video/ipod/Aerosol_Tower.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>Cliff Buck talks about the aerosol tower and the aerosol sampling program while he works on it to change a filter.</p>
 
