joe the sailor youtubified

--- a/video_pages/Life_at_Sea/joe_the_sailor/1_Whale_Canvas.html
+++ b/video_pages/Life_at_Sea/joe_the_sailor/1_Whale_Canvas.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Episode 1: ''Because it's cold''</b>
-      <p><video controls height='360px' width='640px'><source src='../../video/Joe_the_Sailor/1_Whale_Canvas-iPhone.m4v' type='video/mp4' /><source src='../../video/Joe_the_Sailor/1_Whale_Canvas-iPhone-cell.3gp' type='video/3gpp' /><source src='../../video/Joe_the_Sailor/1_Whale_Canvas.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../../video/Joe_the_Sailor/1_Whale_Canvas.mov'><embed src='../../video/Joe_the_Sailor/1_Whale_Canvas.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/P3Gb9PALx_w?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../../video/ipod/Joe_the_Sailor/1_Whale_Canvas.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>What is it like to be a sailor on a research ship? Every person brings different perspectives and experiences to their job. The outreach team interviewed OS (Ordinary Seaman) Joe Martino to provide glimpse into his outlook and experiences, from which we have created eight short video segments.</p>
 
