life at sea youtubeified

--- a/video_pages/Life_at_Sea/Emergency_Drill.html
+++ b/video_pages/Life_at_Sea/Emergency_Drill.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Weekly Emergency Drill</b>
-      <p><video controls height='360px' width='640px'><source src='../video/Abandon_Ship-iPhone.m4v' type='video/mp4' /><source src='../video/Abandon_Ship-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/Abandon_Ship.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/Abandon_Ship.mov'><embed src='../video/Abandon_Ship.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/Pd9aSyz1iC8?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Abandon_Ship.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>Safety drills are a part of life on board any ship. Here the outreach team heads from their cabin to the main lab, where an &ldquo;abandon ship&rdquo; drill is in progress. We also watched safety videos, tried on emergency floatation suits, and participated in safety training.</p>
 
