--- a/video_pages/Life_at_Sea/Fishing.html
+++ b/video_pages/Life_at_Sea/Fishing.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Fishing</b>
-      <p><video controls height='360px' width='640px'><source src='../video/Fishing-iPhone.m4v' type='video/mp4' /><source src='../video/Fishing-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/Fishing.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/Fishing.mov'><embed src='../video/Fishing.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/m7EEzK8b8hs?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Fishing.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>Captain Dave Murline could not resist the opportunity to do a little fishing from time to time when we were on station in benign conditions, here in the far south.</p>
 
