--- a/video_pages/Life_at_Sea/Laundry_Day.html
+++ b/video_pages/Life_at_Sea/Laundry_Day.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Laundry Day</b>
-      <p><video controls height='360px' width='640px'><source src='../video/Laundry_Day-iPhone.m4v' type='video/mp4' /><source src='../video/Laundry_Day-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/Laundry_Day.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/Laundry_Day.mov'><embed src='../video/Laundry_Day.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/XHFi5-vLSJU?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Laundry_Day.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>At sea we each do our own laundry, whenever we choose (except in port), including the set of towels and bed linens which are supplied for us when we board. R/V Roger Revelle has two heavy-duty washers and four dryers (free) and ample laundry supplies to make the task easier.</p>
 
