--- a/video_pages/Life_at_Sea/Waves_Against_Hull.html
+++ b/video_pages/Life_at_Sea/Waves_Against_Hull.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Waves Against Hull</b>
-      <p><video controls height='360px' width='640px'><source src='../video/Waves_Against_Hull-iPhone.m4v' type='video/mp4' /><source src='../video/Waves_Against_Hull-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/Waves_Against_Hull.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/Waves_Against_Hull.mov'><embed src='../video/Waves_Against_Hull.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/_JJOtHPUnCM?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Waves_Against_Hull.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>When the Revelle is underway in certain sea conditions, there are occasional wave slaps against the hull. Play this segment at a higher volume to get an idea of what you are faced with as you hope for a quiet rest in your bunk.</p>
 
