--- a/video_pages/Life_at_Sea/Exercise_at_Sea.html
+++ b/video_pages/Life_at_Sea/Exercise_at_Sea.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Exercise at Sea</b>
-      <p><video controls height='360px' width='640px'><source src='../video/Gym-iPhone.m4v' type='video/mp4' /><source src='../video/Gym-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/Gym.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/Gym.mov'><embed src='../video/Gym.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/YvVLOwEp6n0?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Gym.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>R/V Roger Revelle has a weight room and an exercise room. But here some of the crew take advantage of good conditions to do a little exercise outside. This will also give you a look at the deck areas of the ship.</p>
 
