--- a/video_pages/Life_at_Sea/Galley.html
+++ b/video_pages/Life_at_Sea/Galley.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Galley</b>
-      <p><video controls height='360px' width='640px'><source src='../video/Galley-iPhone.m4v' type='video/mp4' /><source src='../video/Galley-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/Galley.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/Galley.mov'><embed src='../video/Galley.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/xBoxgFMrdVY?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Galley.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>Chef Dax makes cakes with the outreach team. Food provides welcome variety during the many repetitive days of work at sea. R/V Roger Revelle is known for the excellent quality of its food, and the skill of its cooks. Our weekly reports often cite the galley staff for their superb job at keeping us well fed.</p>
 
