--- a/video_pages/Life_at_Sea/Ice_berg_watching.html
+++ b/video_pages/Life_at_Sea/Ice_berg_watching.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Iceberg Watching</b>
-      <p><video controls height='360px' width='640px'><source src='../video/icebergs-iPhone.m4v' type='video/mp4' /><source src='../video/icebergs-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/icebergs.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/icebergs.mov'><embed src='../video/icebergs.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/_cZakzmclNc?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/icebergs.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>Iceberg watching was the favorite activity when we were in the farthest south reaches of the I8S cruise. This video provides a hint of the fantastic variety of shapes we encountered.</p>
 
