--- a/video_pages/RV_Roger_Revelle/Driving.html
+++ b/video_pages/RV_Roger_Revelle/Driving.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Driving</b>
-      <p><video controls height='360px' width='640px'><source src='../video/Driving-iPhone.m4v' type='video/mp4' /><source src='../video/Driving-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/Driving.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/Driving.mov'><embed src='../video/Driving.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/BqvI1AT926k?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Driving.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>Joe Ferris, R/V Roger Revelle&rsquo;s second mate, explains to the outreach team how R/V Roger Revelle is controlled from the ship&rsquo;s bridge.</p>
 
