--- a/video_pages/RV_Roger_Revelle/Fueling.html
+++ b/video_pages/RV_Roger_Revelle/Fueling.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Fueling</b>
-      <p><video controls height='360px' width='640px'><source src='../video/loading_the_ship/Fueling-iPhone.m4v' type='video/mp4' /><source src='../video/loading_the_ship/Fueling-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/loading_the_ship/Fueling.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/loading_the_ship/Fueling.mov'><embed src='../video/loading_the_ship/Fueling.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/v4xPFnP3A6E?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Loading_the_Ship/Fueling.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>These are some short video shots - more like video photos - taken during fueling of R/V Roger Revelle. The ship carries up to 227,500 gallons of fuel. Its diesel generators burn approximately 4,400 gallons per day when driving the ship&rsquo;s twin 3,000 HP electric motors in underway mode. Less fuel is burned when the ship is on station.</p>
 
