--- a/video_pages/Science_at_Sea/Argo.html
+++ b/video_pages/Science_at_Sea/Argo.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Argo Float Deployment</b>
-      <p><video controls height='360px' width='640px'><source src='../video/Argo-iPhone.m4v' type='video/mp4' /><source src='../video/Argo-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/Argo.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/Argo.mov'><embed src='../video/Argo.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/83bRglKKZPI?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Argo.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>This video shows the science team deploying an Argo float. The Argo floats are small robotic devices that sink to about 1000 meters, drift for a set period (usually a little less than one week), then sink to 2000 meters, turn on their temperature and conductivity sensors, rise to the surface (while recording temperature and conductivity profiles), radio their position and data to a satellite, then sink back to 1000 meters to do the cycle over again. Each float will operated for about three years. There are approximately 3000 Argo floats deployed world-wide. In the most remote areas, such as most of the I8S track, there is no commercial shipping and so Argo relies upon research ships to launch floats. The data from cruises like the I8S cruise are essential to correct the salinity data from Argo floats, and also supply the only measure we have of ocean changes below 2000 meters (the oceans average approximately 4000 meters in depth).</p>
 
