--- a/video_pages/Science_at_Sea/Loading_Food.html
+++ b/video_pages/Science_at_Sea/Loading_Food.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Loading Food</b>
-      <p><video controls height='360px' width='640px'><source src='../video/loading_the_ship/Loading_Food-iPhone.m4v' type='video/mp4' /><source src='../video/loading_the_ship/Loading_Food-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/loading_the_ship/Loading_Food.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/loading_the_ship/Loading_Food.mov'><embed src='../video/loading_the_ship/Loading_Food.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/U11i4r7iXq8?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Loading_the_Ship/Loading_Food.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>When food is delivered - and 58 people eat a lot of food in 42 days! - everyone pitches in to help out. Fresh foods are treasured, especially when each runs out in due course. By the end of the 4th week at sea it&rsquo;s down to cole slaw, but of course there are plenty of canned and frozen vegetables and fruits.</p>
 
