--- a/video_pages/Science_at_Sea/Taking_Things_out_of_Vans.html
+++ b/video_pages/Science_at_Sea/Taking_Things_out_of_Vans.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Unloading Vans</b>
-      <p><video controls height='360px' width='640px'><source src='../video/loading_the_ship/Taking_Things_out_of_Vans-iPhone.m4v' type='video/mp4' /><source src='../video/loading_the_ship/Taking_Things_out_of_Vans-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/loading_the_ship/Taking_Things_out_of_Vans.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/loading_the_ship/Taking_Things_out_of_Vans.mov'><embed src='../video/loading_the_ship/Taking_Things_out_of_Vans.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/DrxchBb2TQk?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Loading_the_Ship/Taking_Things_out_of_Vans.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>R/V Revelle, like nearly all research ships, has limited cargo capacity, used mostly for the cruise in progress. Approximately 4 20-foot cargo containers of scientific gear are loaded onto the Revelle at the start of one of our cruises, and then removed. This video was shot in Capetown in 2009 while the I5 cruise was loading.</p>
 
