--- a/video_pages/Science_at_Sea/water_sampling/CFC_Sampling.html
+++ b/video_pages/Science_at_Sea/water_sampling/CFC_Sampling.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>CFC Sampling</b>
-      <p><video controls height='360px' width='640px'><source src='../../video/water_sampling/CFC_Sampling-iPhone.m4v' type='video/mp4' /><source src='../../video/water_sampling/CFC_Sampling-iPhone-cell.3gp' type='video/3gpp' /><source src='../../video/water_sampling/CFC_Sampling.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../../video/water_sampling/CFC_Sampling.mov'><embed src='../../video/water_sampling/CFC_Sampling.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/6P7pbRUG5IE?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../../video/ipod/Water_Sampling/CFC_Sampling.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>This shows the first stages of a CFC sample being drawn. (The photographer missed the rest of the procedure, which looks very much like a repeated version of the part shown here.) The CFC sampler is the first to draw a water sample. Note how the sampler first pushes in, then pulls out, the spigot. If the water bottle, which is supposed to be tightly sealed at this stage, had a leak, water would have issued from the spigot. This bottle was fine. The sampler then reached up to open the air vent (not shown) so that a sample could be drawn. CFC samples are extraordinarily sensitive to contamination from atmospheric CFCs, so the sampler takes every precaution to avoid and eliminate bubbles. This video takes the procedure through the first of at least two rinses, after which the well-rinsed syringe is filled.</p>
 
