--- a/video_pages/Science_at_Sea/water_sampling/Healy_Rosette_Timelapse.html
+++ b/video_pages/Science_at_Sea/water_sampling/Healy_Rosette_Timelapse.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Rosette Timelapse</b>
-      <p><video controls height='360px' width='640px'><source src='../../video/water_sampling/healy_rosette_time_lapse-iPhone.m4v' type='video/mp4' /><source src='../../video/water_sampling/healy_rosette_time_lapse-iPhone-cell.3gp' type='video/3gpp' /><source src='../../video/water_sampling/healy_rosette_time_lapse.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../../video/water_sampling/healy_rosette_time_lapse.mov'><embed src='../../video/water_sampling/healy_rosette_time_lapse.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/LfubWZkvTUU?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../../video/ipod/Water_Sampling/healy_rosette_time_lapse.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>A time lapse of the sampling activites while aboard USCGC (United States Coast Guard Cutter) Healy while in the Arctic for NASA&rsquo;s ICESCAPE project.</p>
 
