--- a/video_pages/Science_at_Sea/water_sampling/Salinity_Sampling.html
+++ b/video_pages/Science_at_Sea/water_sampling/Salinity_Sampling.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Salinity Sampling</b>
-      <p><video controls height='360px' width='640px'><source src='../../video/water_sampling/Salinity_Sampling-iPhone.m4v' type='video/mp4' /><source src='../../video/water_sampling/Salinity_Sampling-iPhone-cell.3gp' type='video/3gpp' /><source src='../../video/water_sampling/Salinity_Sampling.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../../video/water_sampling/Salinity_Sampling.mov'><embed src='../../video/water_sampling/Salinity_Sampling.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/A1liBOTiq2Y?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../../video/ipod/Water_Sampling/Salinity_Sampling.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>This shows Alison Rogers drawing a salinity sample. A salinity sample can be contaminated by a single tiny salt crystal dried onto the bottle, or a drop of rain, and so the main effort is to rinse the bottle well, shake it to dislodge and dissolve any remnant salt crystals, and then capture a sample without any tiny droplets falling into it. The plastic thimble, tightened down with the plastic cap, helps ensure no evaporation of the sample takes place before analysis. (This video was shot in 2009 on the R/V Roger Revelle &ldquo;I5&rdquo; cruise.)</p>
 
