--- a/video_pages/Science_at_Sea/water_sampling/Sample_Cop.html
+++ b/video_pages/Science_at_Sea/water_sampling/Sample_Cop.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Sample Cop</b>
-      <p><video controls height='360px' width='640px'><source src='../../video/water_sampling/Sample_Cop-iPhone.m4v' type='video/mp4' /><source src='../../video/water_sampling/Sample_Cop-iPhone-cell.3gp' type='video/3gpp' /><source src='../../video/water_sampling/Sample_Cop.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../../video/water_sampling/Sample_Cop.mov'><embed src='../../video/water_sampling/Sample_Cop.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/SFvxl7FiEWU?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../../video/ipod/Water_Sampling/Sample_Cop.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>It is J.J. Becker&rsquo;s turn to be Sample Cop. The Sample Cop records the serial number of every water sample, and the cruise, station, cast, and rosette bottle number from which it is drawn. The Sample Cop also helps the sampling team keep track of which bottles are ready for the next sample to be drawn. Samples from the 10-liter bottles on the big 36-place rosette are drawn from the deepest bottle (the first one closed) to the shallowest bottle (the last one closed) in order of sensitivity to contamination: CFCs, helium, oxygen, total CO2, alkalinity, radiocarbon, dissolved organic carbon, tritium, nutrients, and salinity</p>
 
