--- a/video_pages/Science_at_Sea/water_sampling/Trace_Metals.html
+++ b/video_pages/Science_at_Sea/water_sampling/Trace_Metals.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Trace Metals</b>
-      <p><video controls height='360px' width='640px'><source src='../../video/water_sampling/Trace_Metals-iPhone.m4v' type='video/mp4' /><source src='../../video/water_sampling/Trace_Metals-iPhone-cell.3gp' type='video/3gpp' /><source src='../../video/water_sampling/Trace_Metals.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../../video/water_sampling/Trace_Metals.mov'><embed src='../../video/water_sampling/Trace_Metals.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/pr6ziarrlDI?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../../video/ipod/Water_Sampling/Trace_Metals.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>This shows a trace metal sample being drawn. The trace metal team uses a special rosette (deployed over the fantail on I8S), cable, and sheave designed to greatly reduce contamination of samples. After each cast the bottles are removed to the trace metal clean room where samples are drawn.</p>
 
