--- a/video_pages/Science_at_Sea/Trace_Cast.html
+++ b/video_pages/Science_at_Sea/Trace_Cast.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Trace Metal Cast</b>
-      <p><video controls height='360px' width='640px'><source src='../video/Trace_Cast-iPhone.m4v' type='video/mp4' /><source src='../video/Trace_Cast-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/Trace_Cast.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/Trace_Cast.mov'><embed src='../video/Trace_Cast.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/HLNVhr4_4zQ?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Trace_Cast.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>Chris Measures explains a test cast with the trace metal rosette.</p>
 
