--- a/video_pages/Science_at_Sea/Vans.html
+++ b/video_pages/Science_at_Sea/Vans.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Loading Vans</b>
-      <p><video controls height='360px' width='640px'><source src='../video/loading_the_ship/Vans-iPhone.m4v' type='video/mp4' /><source src='../video/loading_the_ship/Vans-iPhone-cell.3gp' type='video/3gpp' /><source src='../video/loading_the_ship/Vans.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../video/loading_the_ship/Vans.mov'><embed src='../video/loading_the_ship/Vans.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/IyEcAwSpteU?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../video/ipod/Loading_the_Ship/Vans.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>Some of the shipping/storage vans and all of the lab vans must be loaded onto the ship, and then removed at the end of the cruise. This video shows one of the vans being lifted onto the ship by a large dockside crane.</p>
 
