--- a/video_pages/Science_at_Sea/chem_analysis/Salinity_analysis.html
+++ b/video_pages/Science_at_Sea/chem_analysis/Salinity_analysis.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Salinity Analysis</b>
-      <p><video controls height='360px' width='640px'><source src='../../video/chemical_analysis/Salinity_analysis-iPhone.m4v' type='video/mp4' /><source src='../../video/chemical_analysis/Salinity_analysis-iPhone-cell.3gp' type='video/3gpp' /><source src='../../video/chemical_analysis/Salinity_analysis.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../../video/chemical_analysis/Salinity_analysis.mov'><embed src='../../video/chemical_analysis/Salinity_analysis.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/Cd6FMtWwQg4?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../../video/ipod/chem_analysis/Salinity_analysis.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>A few close-up shots of the Guildline Autosal salinometer in operation. Thousands of salinity samples were processed during I8S. Salinity is defined from the conductivity of seawater. The salinometer compares the conductivity of the seawater sample to that of a community-agreed &ldquo;standard seawater&rdquo;, which is in turn referenced to a standard KCl solution. The analysis is extremely temperature dependent, so the samples and standards are stored for approximately one day in the lab where the salinometer is located, which is in turn regulated to have temperature stable to about ±1°C (if possible). Each sample must be mounted and run by hand, although the results are recorded electronically.</p>
 
