--- a/video_pages/Science_at_Sea/chem_analysis/Trace_Metals.html
+++ b/video_pages/Science_at_Sea/chem_analysis/Trace_Metals.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Trace Metals Analysis</b>
-      <p><video controls height='360px' width='640px'><source src='../../video/chemical_analysis/Trace_Metals-iPhone.m4v' type='video/mp4' /><source src='../../video/chemical_analysis/Trace_Metals-iPhone-cell.3gp' type='video/3gpp' /><source src='../../video/chemical_analysis/Trace_Metals.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../../video/chemical_analysis/Trace_Metals.mov'><embed src='../../video/chemical_analysis/Trace_Metals.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/dkCNPtSkLsA?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../../video/ipod/chem_analysis/Trace_Metals.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>Dr. Chris Measures describes the analyses of trace metal samples and some crucial aspects of efforts to avoid sample contamination. (The trace metals they are measuring in seawater are very easily contaminated by the ship and its equipment.)</p>
 
