--- a/video_pages/Science_at_Sea/computer_lab/LADCP_Lecture.html
+++ b/video_pages/Science_at_Sea/computer_lab/LADCP_Lecture.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>LDACP Lecture</b>
-      <p><video controls height='360px' width='640px'><source src='../../video/computer_lab/LADCP_Lecture-iPhone.m4v' type='video/mp4' /><source src='../../video/computer_lab/LADCP_Lecture-iPhone-cell.3gp' type='video/3gpp' /><source src='../../video/computer_lab/LADCP_Lecture.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../../video/computer_lab/LADCP_Lecture.mov'><embed src='../../video/computer_lab/LADCP_Lecture.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/BF1m802OkQY?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../../video/ipod/computer_lab/LADCP_Lecture.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>Dr. Jules Hummon explains the principles of operation of an Acoustic Doppler Current Profiler, uses of the data, and her work with ADCP systems on many ships. The shorter video &ldquo;ADCP&rdquo; is the beginning of this longer video.</p>
 
