--- a/video_pages/Science_at_Sea/water_sampling/DO_Sampling.html
+++ b/video_pages/Science_at_Sea/water_sampling/DO_Sampling.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Dissolved Oxygen Sampling</b>
-      <p><video controls height='360px' width='640px'><source src='../../video/water_sampling/DO_Sampling-iPhone.m4v' type='video/mp4' /><source src='../../video/water_sampling/DO_Sampling-iPhone-cell.3gp' type='video/3gpp' /><source src='../../video/water_sampling/DO_Sampling.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../../video/water_sampling/DO_Sampling.mov'><embed src='../../video/water_sampling/DO_Sampling.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/D6AW05Ylpwg?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../../video/ipod/Water_Sampling/DO_Sampling.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>This shows a dissolved oxygen sample being drawn. There can be no bubbles in the sample, and the container must undergo displacement of three volumes with the seawater flowing, after all bubbles are eliminated. Immediately after drawing, the sample is &ldquo;pickled&rdquo; (not shown) with chemicals which fix the oxygen and prevent contamination.</p>
 
