--- a/video_pages/Science_at_Sea/water_sampling/He_Sample.html
+++ b/video_pages/Science_at_Sea/water_sampling/He_Sample.html
@@ -38,10 +38,11 @@
     </div>
     <div id="content">
 	<b>Helium Sample</b>
-      <p><video controls height='360px' width='640px'><source src='../../video/water_sampling/He_Sample-iPhone.m4v' type='video/mp4' /><source src='../../video/water_sampling/He_Sample-iPhone-cell.3gp' type='video/3gpp' /><source src='../../video/water_sampling/He_Sample.ogg' type='video/ogg' /><object CLASSID='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' height='380px' width='640px' CODEBASE='http://www.apple.com/qtactivex/qtplugin.cab'><param name='src' value='../../video/water_sampling/He_Sample.mov'><embed src='../../video/water_sampling/He_Sample.mov' autostart='false' controller='true' width='640px' height='380px' pluginspage='http://www.apple.com/quicktime/' /></object></video></p>
+  <p>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/8YHjuEyQF9w?rel=0" frameborder="0" allowfullscreen></iframe>
+  </p>
 
 <p><br />
-<a href="../../video/ipod/Water_Sampling/He_Sample.m4v">Download iPod/iPhone formatted video</a></p>
 <hr />
 <p>Anthony Dachille collects a water sample for helium analysis. The banging noise in the background is the roll-up hangar doors rattling in the wind.</p>
 
