Update youtube embed to use https

--- a/video_pages/Life_at_Sea/joe_the_sailor/5_Flintstones_Vitamins.html
+++ b/video_pages/Life_at_Sea/joe_the_sailor/5_Flintstones_Vitamins.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Episode 5: Fintstones Vitamins</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/-vU8QIYKiC4?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/-vU8QIYKiC4?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
