--- a/video_pages/RV_Roger_Revelle/Driving.html
+++ b/video_pages/RV_Roger_Revelle/Driving.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Driving</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/BqvI1AT926k?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/BqvI1AT926k?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
