--- a/video_pages/Science_at_Sea/water_sampling/Sample_Cop.html
+++ b/video_pages/Science_at_Sea/water_sampling/Sample_Cop.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Sample Cop</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/SFvxl7FiEWU?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/SFvxl7FiEWU?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
