--- a/video_pages/Deck_Operations/Rosette_Recovery_Day_Rough.html
+++ b/video_pages/Deck_Operations/Rosette_Recovery_Day_Rough.html
@@ -40,7 +40,7 @@
 	<b>Rosette Recovery, Day, Rough</b>
 
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/lhY7MtVAgxQ?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/lhY7MtVAgxQ?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 <p><br />
 <hr />
