--- a/video_pages/Deck_Operations/Rosette_Recovery_Night_Calm.html
+++ b/video_pages/Deck_Operations/Rosette_Recovery_Night_Calm.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Rosette Recovery, Night, Calm</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/0GD3pg9mFM0?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/0GD3pg9mFM0?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
