--- a/video_pages/Life_at_Sea/Emergency_Drill.html
+++ b/video_pages/Life_at_Sea/Emergency_Drill.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Weekly Emergency Drill</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/Pd9aSyz1iC8?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/Pd9aSyz1iC8?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
