--- a/video_pages/Life_at_Sea/Exercise_at_Sea.html
+++ b/video_pages/Life_at_Sea/Exercise_at_Sea.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Exercise at Sea</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/YvVLOwEp6n0?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/YvVLOwEp6n0?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
