--- a/video_pages/Life_at_Sea/Fishing.html
+++ b/video_pages/Life_at_Sea/Fishing.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Fishing</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/m7EEzK8b8hs?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/m7EEzK8b8hs?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
