--- a/video_pages/Life_at_Sea/Laundry_Day.html
+++ b/video_pages/Life_at_Sea/Laundry_Day.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Laundry Day</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/XHFi5-vLSJU?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/XHFi5-vLSJU?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
