--- a/video_pages/Life_at_Sea/joe_the_sailor/1_Whale_Canvas.html
+++ b/video_pages/Life_at_Sea/joe_the_sailor/1_Whale_Canvas.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Episode 1: ''Because it's cold''</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/P3Gb9PALx_w?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/P3Gb9PALx_w?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
