--- a/video_pages/Life_at_Sea/joe_the_sailor/2_What_I_Do.html
+++ b/video_pages/Life_at_Sea/joe_the_sailor/2_What_I_Do.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Episode 2: What I Do</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/xPoxBZ6Xt78?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/xPoxBZ6Xt78?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
