--- a/video_pages/Life_at_Sea/joe_the_sailor/4_On_Plastic.html
+++ b/video_pages/Life_at_Sea/joe_the_sailor/4_On_Plastic.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Episode 4: On Plastic...</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/Gc4BN_smGec?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/Gc4BN_smGec?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
