--- a/video_pages/Life_at_Sea/joe_the_sailor/8_Friend_of_a_Friend_at_MIT.html
+++ b/video_pages/Life_at_Sea/joe_the_sailor/8_Friend_of_a_Friend_at_MIT.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Episode 8: Friend of a Friend at MIT</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/L85F1Df2YDo?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/L85F1Df2YDo?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
