--- a/video_pages/RV_Roger_Revelle/Engine_Room_Tour.html
+++ b/video_pages/RV_Roger_Revelle/Engine_Room_Tour.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Engine Room Tour</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/H4w33Ep7uRk?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/H4w33Ep7uRk?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
