--- a/video_pages/Science_at_Sea/Aerosol_Tower.html
+++ b/video_pages/Science_at_Sea/Aerosol_Tower.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Aerosol Tower</b>
       <p>
-      <iframe width="640" height="360" src="http://www.youtube.com/embed/LMp1ivlN5sE?rel=0" frameborder="0" allowfullscreen></iframe>
+      <iframe width="640" height="360" src="https://www.youtube.com/embed/LMp1ivlN5sE?rel=0" frameborder="0" allowfullscreen></iframe>
       </p>
 
 <p><br />
