--- a/video_pages/Science_at_Sea/CDOM_optics_cast.html
+++ b/video_pages/Science_at_Sea/CDOM_optics_cast.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>CDOM Optics Cast</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/TqC--0cQn6U?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/TqC--0cQn6U?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
