--- a/video_pages/Science_at_Sea/Loading_Food.html
+++ b/video_pages/Science_at_Sea/Loading_Food.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Loading Food</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/U11i4r7iXq8?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/U11i4r7iXq8?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
