--- a/video_pages/Science_at_Sea/chem_analysis/Nutrient_Analysis.html
+++ b/video_pages/Science_at_Sea/chem_analysis/Nutrient_Analysis.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Nutrient Analysis</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/S7kEjAPLD1I?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/S7kEjAPLD1I?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
