--- a/video_pages/Science_at_Sea/chem_analysis/alkalinity_analysis.html
+++ b/video_pages/Science_at_Sea/chem_analysis/alkalinity_analysis.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Alkalinity Analysis</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/Xhhea8_OOjY?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/Xhhea8_OOjY?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
