--- a/video_pages/Science_at_Sea/water_sampling/He_Sample.html
+++ b/video_pages/Science_at_Sea/water_sampling/He_Sample.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Helium Sample</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/8YHjuEyQF9w?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/8YHjuEyQF9w?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
