--- a/video_pages/Science_at_Sea/water_sampling/Salinity_Sampling.html
+++ b/video_pages/Science_at_Sea/water_sampling/Salinity_Sampling.html
@@ -39,7 +39,7 @@
     <div id="content">
 	<b>Salinity Sampling</b>
   <p>
-  <iframe width="640" height="360" src="http://www.youtube.com/embed/A1liBOTiq2Y?rel=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/A1liBOTiq2Y?rel=0" frameborder="0" allowfullscreen></iframe>
   </p>
 
 <p><br />
